# ntn-lbtools

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: pyproject.toml
agents/src/ntn_agents/: __init__.py  config.py  graph.py  state.py
agents/src/ntn_agents/knowledge/: __init__.py  frequency_bands.py  itu_r.py  locations.py
agents/src/ntn_agents/nodes/: __init__.py  asset.py  calculator.py  expert.py  human.py  optimizer.py  parser.py
agents/src/ntn_agents/prompts/: __init__.py  expert.py  optimizer.py  parser.py
agents/src/ntn_agents/tools/: __init__.py  _validation.py  assets.py  link_budget.py  scenarios.py
agents/tests/: test_graph.py
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/src/api/: main.py
backend/src/api/middleware/: auth.py  logging.py
backend/src/api/routes/: assets.py  calculations.py  modcod.py  scenarios.py  sweep.py
backend/src/api/schemas/: assets.py  calculation.py  modcod.py  pagination.py  scenario.py  sweep.py
backend/src/config/: deps.py  settings.py
backend/src/core/: elevation.py  impairments.py  orbit.py  propagation.py
backend/src/core/models/: common.py
backend/src/core/strategies/: base.py  communication.py  dvbs2x.py  nr.py
backend/src/persistence/: database.py
backend/src/persistence/migrations/: env.py
backend/src/persistence/migrations/versions/: 0001_initial.py  0002_add_scenarios_created_at_index.py  0003_add_earth_station_location.py  0004_add_modcod_name.py  0005_add_leo_support.py
backend/src/persistence/models/: assets.py  modcod.py  scenario.py
backend/src/persistence/repositories/: assets.py  base.py  modcod.py  scenarios.py
backend/src/services/: assets_service.py  calculation_service.py  modcod_service.py  scenario_service.py  snapshot_builder.py  sweep_service.py
backend/tests/: conftest.py  test_assets_api.py  test_calculate_api.py  test_calculation_logic.py  test_calculation_service.py  test_core.py  test_elevation.py  test_health.py  test_modcod_api.py  test_nr_strategy.py  test_orbit.py  test_propagation.py  test_scenarios_api.py  test_snapshot_builder.py  test_sweep_api.py  test_sweep_service.py
docs/: README.md  agentic-ai.md  api.md  architecture.md  calculation-engine.md  data-model.md  development.md  frontend.md  mcp-server.md  tech-stack.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  theme.ts
frontend/src/api/: client.ts  provider.test.ts  provider.tsx  queryKeys.ts  schemas.ts  types.ts
frontend/tests/: schemas.test.ts
mcp-server/: .env.example  pyproject.toml
mcp-server/src/: config.py  main.py  openapi_patch.py  tools.py
mcp-server/tests/: __init__.py  test_tools.py
(+81 files in other folders)
